--- a/TP5.ipynb
+++ b/TP5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -970,6 +970,146 @@
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Entreno con todos los datos salvo el chr22. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_tensor = torch.tensor(y_true, dtype=torch.float32)\n",
+    "X_tensor = torch.tensor(X, dtype=torch.float32)\n",
+    "dataset = TensorDataset(X_tensor, y_tensor)\n",
+    "dataloader = DataLoader(dataset, batch_size=10, shuffle=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_nn = DNA_CNN2()\n",
+    "criterion = nn.BCELoss() \n",
+    "optimizer = torch.optim.Adam(my_nn.parameters(), lr=0.001, weight_decay=1e-4)\n",
+    "losses = []\n",
+    "\n",
+    "epochs = 80 # Number of epochs\n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "    \n",
+    "    avg_train_loss = train(my_nn, optimizer, criterion, dataloader)\n",
+    "    losses.append(avg_train_loss)\n",
+    "    \n",
+    "    if epoch in [0, 19, 39, 59, 79]:\n",
+    "        metrics = eval_model(my_nn, dataloader_val)\n",
+    "        print(f\"\\nEpoch {epoch+1}\")\n",
+    "        print(\"Performance:\")\n",
+    "        for metric, value in metrics.items():\n",
+    "            print(f\"{metric}: {value:.4f}\")\n",
+    "    \n",
+    "plt.plot(losses, label = 'train')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Bio import SeqIO\n",
+    "\n",
+    "def extract_windows_without_Ns(fasta_file, chrom=\"chr22\", window_size=100):\n",
+    "\n",
+    "    genome = SeqIO.to_dict(SeqIO.parse(fasta_file, \"fasta\"))\n",
+    "    chrom_seq = genome[chrom].seq\n",
+    "    chrom_len = len(chrom_seq)\n",
+    "    \n",
+    "    windows = []\n",
+    "    start_pos = []\n",
+    "    for start in range(0, chrom_len - window_size + 1, window_size):\n",
+    "        end = start + window_size\n",
+    "        window = chrom_seq[start:end]\n",
+    "        if \"N\" not in window:  # Excluir ventanas con 'N'\n",
+    "            windows.append(str(window).upper())\n",
+    "            start_pos.append(start)\n",
+    "    \n",
+    "    return windows, start_pos\n",
+    "\n",
+    "\n",
+    "fasta_file = \"chr22_GRCh28.fasta\"\n",
+    "windows, start_pos = extract_windows_without_Ns(fasta_file, chrom=\"chr22\", window_size=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "windows_one_hot = torch.stack([one_hot_encoding(x).float() for x in windows])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([391548, 4, 100])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "windows_one_hot.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_nn.eval()\n",
+    "\n",
+    "with torch.no_grad():  \n",
+    "    predictions = my_nn(windows_one_hot)\n",
+    "\n",
+    "predicted_values = predictions.numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12, 6))\n",
+    "plt.plot(start_pos, predicted_values, label=\"Predicción\", color=\"blue\", marker=\"o\", linestyle=\"-\")\n",
+    "\n",
+    "plt.xlabel(\"Inicio de ventana\")\n",
+    "plt.ylabel(\"Valor predicho\")\n",
+    "plt.grid(True)\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
@@ -988,7 +1128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
